@@ -2,4 +2,4 @@
 INCLUDES =  -I$(top_srcdir)/ @LIBXML_CFLAGS@
 
 #The libraries that the executable needs to link against:
-LIBS = $(top_builddir)/libxml++/libxml++-2.5.la @LIBS@ @LIBXML_LIBS@
+LIBS = $(top_builddir)/libxml++/libxml++-2.6.la @LIBS@ @LIBXML_LIBS@
